--- a/app/index.html
+++ b/app/index.html
@@ -3,19 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, shrink-to-fit=0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-  <title>webgl-wireframes</title>
+  <title>airspace bake test 1</title>
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet">  
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
   <canvas id="canvas" style="visibility: hidden;"></canvas>
   <div class="main-title">
-    Stylized Wireframe Rendering in WebGL
+    AirSpace bake test 01
   </div>
-  <div class="info-container">
-    <p class="info">made by <a href="https://twitter.com/mattdesl">@mattdesl</a></p>
-    <p class="code"><a href="https://github.com/mattdesl/webgl-wireframes">see the code</a></p>
-  </div>
+  
   <script src="bundle.js"></script>
 </body>
 </html>
